examples/test/testpolicy8828.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8828
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key46: value2
      key31: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value26
          key12: value28
      podSelector:
        matchLabels:
          key30: value13
          key35: value3
